updates to try to set the cmdinput position (as well as text).  fix button alignment, change checkmark to green (and extend), and remove the transition from parent component and move to copy

--- a/src/app/common/elements/copybutton.less
+++ b/src/app/common/elements/copybutton.less
@@ -1,3 +1,7 @@
 .copy-button {
     padding: 5px 5px;
+
+    .fa-check {
+        color: var(--app-success-color);
+    }
 }
